# examples

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yml
actix-fileadapter-rbac/: Cargo.toml  README.md
actix-middleware-example/: .env.sample  .gitignore  Cargo.toml  README.md  casbin.conf  preset_policy.csv
actix-middleware-example/.github/: ci.yml
actix-middleware-example/migrations/2020-07-04-091023_add_users/: up.sql
actix-middleware-example/migrations/2020-07-04-091633_add_posts/: up.sql
actix-middleware-example/migrations/2020-07-15-061549_add_root_user/: up.sql
actix-middleware-example/migrations/2020-08-17-082254_add_loggin_session_field_to_user_table/: down.sql  up.sql
actix-middleware-example/src/: constants.rs  errors.rs  main.rs  schema.rs  secret.key.sample
actix-middleware-example/src/api/: post.rs  user.rs
actix-middleware-example/src/config/: db.rs
actix-middleware-example/src/middleware/: authn.rs
actix-middleware-example/src/models/: mod.rs  post.rs  user.rs  user_token.rs
actix-middleware-example/src/routers/: mod.rs
actix-middleware-example/src/services/: account_service.rs  mod.rs  post_service.rs
actix-middleware-example/src/utils/: csv_utils.rs  hash_utils.rs  mod.rs  token_utils.rs
actix-pgsql-simple/: .env  Cargo.toml  Makefile  README.md  Readme.md
actix-pgsql-simple/docker/: Dockerfile  docker-compose.yml
actix-pgsql-simple/src/: main.rs
actix_fileadapter_rbac/: Cargo.toml  README.md
axum-middleware-example/: .env.sample  Cargo.toml  rbac_model_with_preset_policy.csv
axum-middleware-example/migrations/2022-07-16-125141_users/: up.sql
axum-middleware-example/src/: constants.rs  errors.rs  main.rs  schema.rs  secret.key.sample
axum-middleware-example/src/api/: user.rs
axum-middleware-example/src/middleware/: auth.rs  authorizeJWT.rs  middleware.rs  mod.rs
axum-middleware-example/src/model/: db.rs  mod.rs  response.rs  user.rs  user_token.rs
axum-middleware-example/src/route/: routes.rs
axum-middleware-example/src/service/: user.rs
axum-middleware-example/src/utils/: bcrypt.rs  csv_utils.rs  mod.rs  token_utils.rs
ntex-fileadapter-acl/: Cargo.toml  README.md
ntex-fileadapter-acl/acl/: acl_policy.csv
ntex-fileadapter-acl/src/: main.rs
poem-todo/: .env  Cargo.toml  rbac_with_pattern_policy.csv
poem-todo/migrations/2022-07-16-091806_create_posts/: down.sql  up.sql
poem-todo/src/: apis.rs  auth.rs  main.rs  models.rs  schema.rs
