[package]
name = "actix-fileadapter-rbac-example"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-web = "4.2"
actix-rt = "1.1"
casbin = "2.0"
dotenv = "0.15"
loge = {version = "0.4", default-features = false, features = ["colored", "chrono"]}
