[package]
name = "actix-middleware-example"
version = "0.1.0"
authors = ["Hackerchai <hackerchai.com@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
actix =  "0.13.0"
actix-web = "4.0.1"
actix-service = "2.0.2"
actix-rt = "2.6.0"
actix-cors = "0.6.0"
futures = "0.3.5"
failure = "0.1.8"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
derive_more = "0.99.17"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres","r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
jsonwebtoken = "8.0.1"
bcrypt = "0.12.0"
csv = "1.1.6"
walkdir = "2.3.2"
actix-casbin= {version = "0.4.2", default-features = false, features = [ "runtime-async-std" ]}
actix-casbin-auth = {version = "0.4.4", default-features = false, features = [ "runtime-async-std" ]}
diesel-adapter = { version = "0.9.0", default-features = false, features = ["postgres","runtime-async-std"] }
uuid = {version = "0.8.2", features = ["v4"] }
