[package]
name = "casbin-actix-pgsql"
version = "0.1.0"
edition = "2021"

[dependencies]
casbin = "2.0.9"
diesel-adapter = { version = "0.9.0", features = ["postgres"] }
async-std = { version = "1.10.0", features = ["attributes"] }

diesel = { version = "1.4.8", features = ["postgres", "serde_json", "r2d2"] }

actix-web = { version = "4.0.1" }
actix-rt = "2.6.0"
serde = "1.0.136"
serde_derive = "1.0.136"

dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.14"
