[package]
name = "casbin-actix-pgsql"
version = "0.1.0"
edition = "2018"

[dependencies]
casbin = "2.0"
diesel-adapter = { version = "0.8", features = ["postgres"] }
async-std = { version = "1.6", features = ["attributes"] }

diesel = { version = "1.4", features = ["postgres", "serde_json", "r2d2"] }

actix-web = { version = "4.1" }
actix-rt = "1.1"
serde = "1.0"
serde_derive = "1.0"

dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
