[package]
name = "casbin-actix-pgsql"
version = "0.1.0"
edition = "2018"

[dependencies]
casbin = "2.0.9"
diesel-adapter = { version = "0.9.0", features = ["postgres"] }
async-std = { version = "1.6", features = ["attributes"] }

diesel = { version = "1.4", features = ["postgres", "serde_json", "r2d2"] }

actix-web = "4.1.0"
actix-rt = "2.7.0"
serde = "1.0"
serde_derive = "1.0"

dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
