[package]
name = "axum-middleware-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
tokio = { version = "1.17.0", features = [ "full" ] }
futures = "0.3.5"
failure = "0.1.8"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
derive_more = "0.99.10"
diesel = { version = "1.4.5", features = ["postgres","r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.11"
jsonwebtoken = "8.1.0"
bcrypt = "0.13.0"
csv = "1.1.3"
walkdir = "2.3.1"
diesel-adapter = { version = "0.9.0", default-features = false, features = ["postgres","runtime-async-std"] }
uuid = {version = "1.1.2", features = ["v4"] }