[package]
name = "ntex-fileadapter-acl-example"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
workspace = ".."

[dependencies]
ntex = "0.5.15"
casbin = "2.0.9"
dotenv = "0.15.0"
loge = {version = "0.4.2", default-features = false, features = ["colored", "chrono"]}
